--- a/EyesClassification.ipynb
+++ b/EyesClassification.ipynb
@@ -5,7 +5,7 @@
    "id": "0fda551d",
    "metadata": {},
    "source": [
-    "# <center> Project 3 - Eyes Classification  <center>\n",
+    "# <center>  Eyes Classification  <center>\n",
     "\n",
     "<hr style=\"border:2px  solid black\"> </hr>"
    ]
