--- a/EyesClassification.ipynb
+++ b/EyesClassification.ipynb
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "WindowsPath('C:/Users/Hp/Desktop/AI_CANADA/SEM 2/Neural Networks - AIDI 1009/PROJECT 3/dataset/maleeyes')"
+       "WindowsPath('C:/Users/.../dataset/maleeyes')"
       ]
      },
      "execution_count": 2,
@@ -121,8 +121,8 @@
    ],
    "source": [
     "# getting the path of the dataset\n",
-    "female_dir = Path('C:/Users/Hp/Desktop/AI_CANADA/SEM 2/Neural Networks - AIDI 1009/PROJECT 3/dataset/femaleeyes')\n",
-    "male_dir = Path('C:/Users/Hp/Desktop/AI_CANADA/SEM 2/Neural Networks - AIDI 1009/PROJECT 3/dataset/maleeyes')\n",
+    "female_dir = Path('C:/Users/.../dataset/femaleeyes')\n",
+    "male_dir = Path('C:/Users/.../dataset/maleeyes')\n",
     "male_dir"
    ]
   },
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "WindowsPath('C:/Users/Hp/Desktop/AI_CANADA/SEM 2/Neural Networks - AIDI 1009/PROJECT 3/dataset/maleeyes/1.jpg')"
+       "WindowsPath('C:/Users/.../dataset/maleeyes/1.jpg')"
       ]
      },
      "execution_count": 3,
@@ -487,7 +487,7 @@
    ],
    "source": [
     "#getting the images for train test\n",
-    "dir = 'C:/Users/Hp/Desktop/AI_CANADA/SEM 2/Neural Networks - AIDI 1009/PROJECT 3/ds/trial/'\n",
+    "dir = 'C:/Users/../ds/train'\n",
     "dir\n",
     "Categories=['fem_TRIAL' , 'mal_TRIAL']\n",
     "flat_data_arr=[] #input array\n",
@@ -787,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dir_test = Path('C:/Users/Hp/Desktop/AI_CANADA/SEM 2/Neural Networks - AIDI 1009/PROJECT 3/ds/')"
+    "# dir_test = Path('C:/Users/../ds/')"
    ]
   },
   {
