--- a/EyesClassification.ipynb
+++ b/EyesClassification.ipynb
@@ -359,27 +359,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users..</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>femaleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>femaleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -388,11 +388,11 @@
       ],
       "text/plain": [
        "                                                File       Label\n",
-       "0  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "1  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "2  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...  femaleeyes\n",
-       "3  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...  femaleeyes\n",
-       "4  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes"
+       "0  C:\\Users...    maleeyes\n",
+       "1  C:\\Users...    maleeyes\n",
+       "2  C:\\Users...  femaleeyes\n",
+       "3  C:\\Users...  femaleeyes\n",
+       "4  C:\\Users...    maleeyes"
       ]
      },
      "execution_count": 8,
@@ -971,27 +971,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>8336</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>229</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7974</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6021</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8369</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>femaleeyes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1000,11 +1000,11 @@
       ],
       "text/plain": [
        "                                                   File       Label\n",
-       "8336  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "229   C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "7974  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "6021  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "8369  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...  femaleeyes"
+       "8336  C:\\Users...    maleeyes\n",
+       "229   C:\\Users...    maleeyes\n",
+       "7974  C:\\Users...    maleeyes\n",
+       "6021  C:\\Users...    maleeyes\n",
+       "8369  C:\\Users...  femaleeyes"
       ]
      },
      "metadata": {},
@@ -1038,27 +1038,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>6273</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7450</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6458</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8625</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3141</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>femaleeyes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1067,11 +1067,11 @@
       ],
       "text/plain": [
        "                                                   File       Label\n",
-       "6273  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "7450  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "6458  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "8625  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "3141  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...  femaleeyes"
+       "6273  C:\\Users...    maleeyes\n",
+       "7450  C:\\Users...    maleeyes\n",
+       "6458  C:\\Users...    maleeyes\n",
+       "8625  C:\\Users...    maleeyes\n",
+       "3141  C:\\Users...  femaleeyes"
       ]
      },
      "execution_count": 21,
