--- a/EyesClassification.ipynb
+++ b/EyesClassification.ipynb
@@ -1133,42 +1133,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>7450</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6458</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8625</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3141</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>femaleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3500</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6879</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8226</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8253</th>\n",
-       "      <td>C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...</td>\n",
+       "      <td>C:\\Users...</td>\n",
        "      <td>maleeyes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1177,14 +1177,14 @@
       ],
       "text/plain": [
        "                                                   File       Label\n",
-       "7450  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "6458  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "8625  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "3141  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...  femaleeyes\n",
-       "3500  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "6879  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "8226  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes\n",
-       "8253  C:\\Users\\Hp\\Desktop\\AI_CANADA\\SEM 2\\Neural Net...    maleeyes"
+       "7450  C:\\Users...    maleeyes\n",
+       "6458  C:\\Users...    maleeyes\n",
+       "8625  C:\\Users...    maleeyes\n",
+       "3141  C:\\Users...  femaleeyes\n",
+       "3500  C:\\Users...    maleeyes\n",
+       "6879  C:\\Users...    maleeyes\n",
+       "8226  C:\\Users...    maleeyes\n",
+       "8253  C:\\Users...    maleeyes"
       ]
      },
      "metadata": {},
